[package]
name = "promptx"
version = "0.4.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "AI prompt optimization"
repository = "https://github.com/ai-flowx/promptx"
documentation = "https://github.com/ai-flowx/promptx"
homepage = "https://github.com/ai-flowx/promptx"
keywords = ["ai", "prompt", "optimization"]
categories = ["database"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "promptx"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "4.5"
log = "0.4"
log4rs = "1.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.15"
tokio = "1.43"
url = "2.5"
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
tempfile = "3.15"
tokio = { version = "1.43", features = ["full"] }
wiremock = "0.6"

[build-dependencies]

[badges]
maintenance = { status = "actively-developed" }
